<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_search_black_36dp"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/title_section2" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/title_section3" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/title_section4" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_section5" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout" />

        </menu>
    </item>
</menu>
